<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2011 Adam Shanks (ChainsDD)
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pin_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <EditText android:id="@+id/pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:gravity="center"
        android:inputType="numberPassword"
        android:textColor="@android:color/white"
        android:cursorVisible="false"
        android:hint="@string/pin_enter_pin"
        android:background="@drawable/textfield_activated_holo_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/pin_1"
            style="@style/PinButton"
            android:text="@string/one" />
        <Button android:id="@+id/pin_2"
            style="@style/PinButton"
            android:text="@string/two" />
        <Button android:id="@+id/pin_3"
            style="@style/PinButton"
            android:text="@string/three" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/pin_4"
            style="@style/PinButton"
            android:text="@string/four" />
        <Button android:id="@+id/pin_5"
            style="@style/PinButton"
            android:text="@string/five" />
        <Button android:id="@+id/pin_6"
            style="@style/PinButton"
            android:text="@string/six" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/pin_7"
            style="@style/PinButton"
            android:text="@string/seven" />
        <Button android:id="@+id/pin_8"
            style="@style/PinButton"
            android:text="@string/eight" />
        <Button android:id="@+id/pin_9"
            style="@style/PinButton"
            android:text="@string/nine" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button  android:id="@+id/pin_ok"
            style="@style/PinButton"
            android:text="@string/allow" />
        <Button android:id="@+id/pin_0"
            style="@style/PinButton"
            android:text="@string/zero" />
        <Button android:id="@+id/pin_cancel"
            style="@style/PinButton"
            android:text="@string/deny" />
    </LinearLayout>
</LinearLayout>
